[package]
name = "ss13_mlogfilter"
description = "Simple CLI utility to filter Space Station 13 exported chat logs"
license = "MIT"
authors = ["Vlad0s <vladstolyarchuk7@gmail.com>"]
version = "0.2.1"
edition = "2024"

[[bin]]
name = "ss13-mlogfilter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
